resources/public/style.css
/* ... */
.panel-body article a {
    display: block;
}

.no-p-margin p {
    margin: 0 !important;
}

/* CHAT */

.chat-wrapper {
    display: flex;
    flex-flow: column;
    height: 99%;
}

.chat-wrapper ul.chat-body {
    flex: 1;
    overflow: auto;
    margin: 0;
    padding: 0;
    list-style: none;
}

ul.chat-body li.chat-line {
    /*border:1px solid #000;*/
    line-height: 1.5rem;
}

ul.chat-body li.chat-line:not(:last-child):not(:only-of-type) {
    margin: 10px 0;
}

ul.chat-body li.chat-line:nth-child(odd) {
    /*background-image: linear-gradient(to bottom, #0000, #0005, #0000);*/
}

li.chat-line span[title]:not(.text-badge), li.chat-line i[title] {
    border-bottom: 1px dashed #aaa;
    cursor: default;
}

li.chat-line .text-badge {
    line-height: 1rem;
    background-color: #ccc;
    padding: .15rem .5rem;
    border-radius: 1rem;
    color: #770;
    cursor: default;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

li.chat-line.server-action {
    text-align: center;
    font-weight: bold;
    color: #555;
    cursor: default;
}

li.chat-line .text-badge:not(:last-child):not(:only-of-type) {
    margin-right: .25rem;
}

li.chat-line .badges {
    margin-right: .25rem;
}

li.chat-line .user {
    font-weight: bold;
}

li.chat-line [data-action] {
    cursor: pointer !important;
}

li.chat-line .actions {
    margin: 0 .2em;
}

li.chat-line .actions [data-action]:not(:last-of-type):not(:only-child) {
    margin-right: .2em;
}

.chat-wrapper .chat-controls, .chat-wrapper .chat-hints {
    flex: 0;
    position: relative;
}

.chat-wrapper .chat-hints {
    padding: .5rem;
    font-family: monospace;
    font-size: 1.2rem;
    font-weight: bold;
}

.chat-wrapper .chat-controls textarea {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    resize: none;
}

#message-icon.has-notification {
    color: #b20;
}

.chat-ratelimit-overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #0006;
    color: #FFF;
    text-shadow: #000 0 0 2px;
    font-size: 1.5rem;
    display: inline-flex;
    text-align: center;
    vertical-align: middle;
    align-items: center;
    justify-content: center;
    align-content: center;
    flex-flow: column;
    user-select: none;
}

/* CHAT ACTIONS POPUP */

.popup {
    position: absolute;
    z-index: 22;
    width: 100px;
    max-width: 200px;
    height: auto;
    background-color: #eee;
    border-radius: 5px;
    border: 1px solid #000;
    text-align: center;
    font-size: 1rem !important;
    line-height: 1rem !important;
}

.popup ul.popup-actions {
    list-style: none;
    padding: 0;
    margin: 0;
}

.popup ul.popup-actions li:not(.separator) {
    cursor: pointer;
    padding: 3px 0;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.popup ul.popup-actions li.separator {
    border-radius: 0 !important;
    height: 1px;
    background-color: #fff0;
    background-image: linear-gradient(to right, #000, #333, #000);
}

.popup ul.popup-actions li:not(:only-of-type) {
    border-radius: 0;
}

.popup ul.popup-actions li:first-of-type {
    border-radius: 5px 5px 0 0;
}

.popup ul.popup-actions li:last-of-type {
    border-radius: 0 0 5px 5px;
}

.popup ul.popup-actions li:only-of-type {
    border-radius: 5px;
}

.popup ul.popup-actions li:not(.separator):hover {
    background-color: #fff;
}

.popup ul.popup-actions li:not(.separator):active {
    background-color: #f8f8f8;
}

/*//////////////////////////*\
| Mobile Styles
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

@media (max-width: 1500px) {
    #donate, #donate > * {
        max-width: 300px;
    }
}

@media (max-width: 1600px) {
    #ui .left, #ui .right {
        bottom: 70px;
        transition: bottom .25s ease-in-out;
    }

    body.undo-visible #ui .left, body.undo-visible #ui .right {
        bottom: 112px;
    }
}

@media (max-width: 768px) {
    .palette {
        width: 100%;
    }

    #ui .left {
        top: 88px;
        left: 16px;
        bottom: auto;
        right: auto;
    }

    #ui .right {
        top: 48px;
        left: 16px;
        bottom: auto;
        right: auto;
    }

    #drawers-opener {
        display: inline-block;
    }

    .drawer > .open {
        display: none;
    }

    .drawer, .drawer > .drawer-content {
        z-index: 20;
        width: 100vw;
        height: 100vh;
    }

    .drawer.open, .drawer.open > .drawer-content {
        position: fixed;
        left: 0;
        top: 0;
    }

    .drawer-content > div:not(.close) {
        border: 1px solid #fff;
    }

    .message {
        max-width: 100%;
    }

    .panel, .panel.half-width {
        max-width: 100% !important;
        width: 100% !important;
    }

    .panel.left {
        left: -105%;
    }

    .panel.right {
        right: -105%;
    }
}

